make task an interface & implement 2 type of tasks
