# docs/swagger.yaml
@@ -737,6 +737,56 @@ paths:
             $ref: '#/definitions/pkg.Error'
       tags:
       - realTime
+  /api/v2/schedules/off:
+    post:
+      parameters:
+      - description: project id
+        in: query
+        name: project
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: object
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+      tags:
+      - schedule
+  /api/v2/schedules/on:
+    post:
+      parameters:
+      - description: project id
+        in: query
+        name: project
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: object
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+      tags:
+      - schedule
   /api/v2/stories:
     get:
       parameters:
